Deprecated URL constructor usage replaced